--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    width: 520px;
-    min-height: 600px;
-    background: #161a2b;
+    width: 620px;
+    min-height: 500px;
+    background: transparent;
     text-align: center;
-    margin: 128px auto;
+    margin: 20px auto;
     border-radius: 10px;
     padding-bottom: 32px;
 }
