--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -1,33 +1,32 @@
-.complete {
-    text-decoration: line-through;
-    opacity: 0.4;
-}
-
 .todo-form {
-    margin-bottom: 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 13px;
+    background: #e0e0e6;
+    margin: 15px auto;
+    width: 80%;
 }
 
 .todo-input {
     padding: 14px 32px 14px 16px;
-    border-radius: 4px 0 0 4px;
-    border: 2px solid #5d0cff;
+    border-radius: 13px;
+    background: #e0e0e6;
     outline: none;
-    width: 320px;
-    background: transparent;
-    color: #fff;
+    width: 100%;
+    color: #888888;
 }
 
 .todo-button {
-    padding: 16px;
-    border: none;
-    border-radius: 0 4px 4px 0;
+    user-select: none;
+    border-radius: 50%;
+    font-size: 25px;
     cursor: pointer;
-    outline: none;
-    background: linear-gradient(
-            90deg,
-            rgba(93, 12, 255, 1) 0%,
-            rgba(155, 0, 250, 1) 100%
-    );
-    color: #fff;
-    text-transform: capitalize;
+    margin-right: 10px;
+    color: #2a292a;
+    transition: 0.3s;
+}
+
+.todo-button:hover {
+    background: #d1d1d7;
 }
