--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -1,5 +1,18 @@
 .todo-list {
     display: flex;
     flex-direction: column;
-    position: relative;
+}
+
+.todo-list-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 4px auto;
+    width: 80%;
+}
+
+.todo-list-date {
+    margin-top: 2px;
+    font-size: 20px;
+    color: #9ea1a8;
 }
