--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -6,6 +6,7 @@
     background: #e0e0e6;
     margin: 15px auto;
     width: 80%;
+    box-shadow: 2px 2px rgba(42, 42, 42, 0.05);
 }
 
 .todo-input {
