--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,6 @@
 .app {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     margin: 30px;
 }
