--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -8,6 +8,7 @@
     border-radius: 15px;
     width: 300px;
     box-shadow: 2px 2px rgba(42, 42, 42, 0.05);
+    flex-grow: 0.5;
 }
 
 .sidebar-item {
