--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -43,7 +43,8 @@
     color: #2a292a;
 }
 
-.edit-icon, .delete-icon {
+.edit-icon,
+.delete-icon {
     user-select: none;
     border-radius: 50%;
     font-size: 20px;
@@ -55,6 +56,7 @@
     font-size: 25px;
 }
 
-.delete-icon:hover, .edit-icon:hover {
-   color: #888888;
+.delete-icon:hover,
+.edit-icon:hover {
+    color: #888888;
 }
